--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+	--primary-one: #0d22cc;
+	--primary-two: #e074f1;
+	--secondary-one: #9a909f;
+	--secondary-two: #d6d3d7;
+	--background: #f7f7f7;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--background) !important;
+}
+
+.topView {
+	height: 10vh;
+    width: 100%;
+    background-image: url("./assets/topview.png"), linear-gradient(var(--secondary-one), var(--secondary-two));
+    background-position: bottom;
+}
+
+.logoBox {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+}
+
+.authForm {
+    height: 70vh;
+}
+
+.authForm {
+	padding: 100px 0 0 0;
+}
+
+.otpForm > div {
+	justify-content: center;
+    align-items: center;
+    height: 10%;
+}
+
+.otpInput{
+	margin-bottom: 1rem;
+}
+.otpInput input {
+	width: 2rem !important;
+	height: 2rem !important;
+	margin: 0 5px;
+	border-radius: 5px;
+	border: 1px solid var(--secondary-one);
+}
+.otpMsg {
+	margin: 50px 0;
+	text-align: center;
+}
+
+.otpError {
+	border: 1px solid var(--danger) !important;
+}
+.react-tel-input .special-label {
+	background-color: var(--background) !important;
+}
+.react-tel-input .form-control {
+	padding: 22.5px 14px 22.5px 58px !important;
+}
+.react-tel-input {
+	width: fit-content !important;
+	margin: 0 auto !important; 
+}
+
+.btn-primary-gradient {
+    background: linear-gradient(var(--primary-one), var(--primary-two));
+    color: #fff !important;
+    border: none !important;
+}
+.btn-primary-gradient:focus {
+	box-shadow: none !important;
+}
+.validateMethod ~ label {
+	border: 1px solid var(--secondary-one);
+	border-radius: 5px;
+}
+.validateMethod:checked ~ label .radio-check {
+	display: block !important;
+}
+
+.radio-check {
+    position: absolute;
+    bottom: 18%;
+    left: 45%;
+    display: none;
 }
